--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,7 @@ dependencies:
   country_picker: ^2.0.27
   intl_phone_field: ^3.2.0
   flutter_html:
+  tcard: ^1.3.5
 
 dev_dependencies:
   flutter_test:
