--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,7 @@ dependencies:
   intl_phone_field: ^3.2.0
   flutter_html:
   tcard: ^1.3.5
+  flutter_chat_bubble: ^2.0.2
 
 dev_dependencies:
   flutter_test:
