--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,10 @@ dependencies:
   flutter_html:
   tcard: ^1.3.5
   flutter_chat_bubble: ^2.0.2
+  permission_handler: ^11.3.1
+  map_picker: ^0.0.3
+  app_settings: ^5.2.0
+  logger: ^2.5.0
 
 dev_dependencies:
   flutter_test:
