--- a/macos/Runner/Configs/AppInfo.xcconfig
+++ b/macos/Runner/Configs/AppInfo.xcconfig
@@ -8,7 +8,7 @@
 PRODUCT_NAME = ndolo_dating
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = com.example.ndoloDating
+PRODUCT_BUNDLE_IDENTIFIER = com.ndolo.ndoloDating
 
 // The copyright displayed in application information
 PRODUCT_COPYRIGHT = Copyright © 2024 com.example. All rights reserved.
