--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,6 +69,15 @@ dependencies:
   map_picker: ^0.0.3
   app_settings: ^5.2.0
   logger: ^2.5.0
+  firebase_core: ^3.11.0
+  firebase_auth: ^5.4.2
+  cloud_firestore: ^5.6.3
+  firebase_messaging: ^15.2.2
+  flutter_local_notifications: ^18.0.1
+
+
+
+
 
 dev_dependencies:
   flutter_test:
