--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -2,7 +2,11 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>CFBundleDevelopmentRegion</key>
+    <key>NSPhotoLibraryUsageDescription</key>
+    <string>Your message to access photo library</string>
+    <key>NSCameraUsageDescription</key>
+    <string>Your message to access camera</string>
+    <key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleDisplayName</key>
 	<string>Ndolo Dating</string>
