--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -74,6 +74,13 @@ dependencies:
   cloud_firestore: ^5.6.3
   firebase_messaging: ^15.2.2
   flutter_local_notifications: ^18.0.1
+  socket_io_client: ^3.0.2
+  zego_uikit: ^2.28.7
+  zego_uikit_prebuilt_call: ^4.16.14
+  zego_uikit_signaling_plugin: ^2.8.10
+  google_sign_in: ^6.2.2
+  zego_express_engine: ^3.19.0
+
 
 
 
