--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -3,6 +3,10 @@
 <plist version="1.0">
 <dict>
     <key>NSCameraUsageDescription</key>
+    <string>We require camera access to connect to a call</string>
+    <key>NSMicrophoneUsageDescription</key>
+    <string>We require microphone access to connect to a call</string>
+    <key>NSCameraUsageDescription</key>
     <string>We require microphone access to connect to a call</string>
     <key>NSPhotoLibraryUsageDescription</key>
     <string>Your message to access photo library</string>
