--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,7 +47,7 @@ dependencies:
   fluttertoast: ^8.2.8
   mime_type: ^1.0.1
   cached_network_image: ^3.4.1
-  intl: ^0.18.0
+  intl:
   timeago: ^3.6.1
   shimmer: ^3.0.0
   path_provider: ^2.1.5
@@ -80,6 +80,7 @@ dependencies:
   zego_uikit_signaling_plugin: ^2.8.10
   google_sign_in: ^6.2.2
   zego_express_engine: ^3.19.0
+  flutter_localization:
 
 
 
