--- a/android/build.gradle
+++ b/android/build.gradle
@@ -4,6 +4,18 @@ allprojects {
         mavenCentral()
     }
 }
+buildscript {
+    ext.kotlin_version = "2.1.0"
+    repositories {
+        google()
+        mavenCentral()
+    }
+    dependencies {
+        classpath 'com.android.tools.build:gradle:4.1.3'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+    }
+}
+
 
 rootProject.buildDir = "../build"
 subprojects {
