Socket Api Done

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -8,6 +8,14 @@ plugins {
     id "dev.flutter.flutter-gradle-plugin"
 }
 
+def keystoreProperties = new Properties()
+def keystorePropertiesFile = rootProject.file("key.properties")
+
+// Load the keystore properties using Groovy's InputStream method
+if (keystorePropertiesFile.exists()) {
+    keystoreProperties.load(keystorePropertiesFile.newInputStream()) // Correct method in Groovy
+}
+
 android {
     namespace = "com.ndolo.ndolo_dating"
     compileSdk = 35
@@ -23,21 +31,28 @@ android {
     }
 
     defaultConfig {
-        // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
         applicationId = "com.ndolo.ndolo_dating"
-        // You can update the following values to match your application needs.
-        // For more information, see: https://flutter.dev/to/review-gradle-config.
         minSdk = 23
         targetSdk = flutter.targetSdkVersion
         versionCode = flutter.versionCode
         versionName = flutter.versionName
     }
 
+    signingConfigs {
+        release {
+            keyAlias keystoreProperties["keyAlias"] as String
+            keyPassword keystoreProperties["keyPassword"] as String
+            storeFile file(keystoreProperties["storeFile"] as String)
+            storePassword keystoreProperties["storePassword"] as String
+        }
+    }
+
+
+
+
     buildTypes {
         release {
-            // TODO: Add your own signing config for the release build.
-            // Signing with the debug keys for now, so `flutter run --release` works.
-            signingConfig = signingConfigs.debug
+            signingConfig = signingConfigs.getByName("release")
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             shrinkResources false
